--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,6 @@
         "psr-4": {
             "Konovalchuk\\LaravelImageOptimizer\\": "src"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
