--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,10 @@
             "name": "Dmitry Konovalchuk",
             "email": "dmitry.konovalchuk@gmail.com"
         }
-    ],
-    "minimum-stability": "dev",
+    ]
     "require": {
         "php": ">=5.5.9",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*"
+        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*"
     },
     "autoload": {
         "psr-4": {
